# o2-Template

./: .gitignore  .mcp.json  CLAUDE.md  CMakeLists.txt  CMakePresets.json  EditorConfig.json  GenerateProject.bat  GenerateProject.command  GenerateProject.py  ProjectSettings.json  README.md
.github/workflows/: android-cmake.yml  ios-cmake.yml  linux-cmake.yml  mac-cmake.yml  wasm-cmake.yml  windows-cmake.yml
Assets/: Main.scn
Sources/Game/: GameApplication.cpp  GameApplication.h  GameLib.cpp  RotatorComponent.cpp  RotatorComponent.h
Sources/GameTests/: FoxModelTests.cpp  RotatorComponentTests.cpp  TestsMain.cpp
Sources/GameUITests/: MainSceneUITests.cpp  TestsMain.cpp
